apps/argo-apps/istio/gateways/ultary-core.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ultary-core
  annotations:
    external-dns.kubernetes.io/private: 'true'
    external-dns.kubernetes.io/public: 'true'
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - argo.ultary.co
        - harbor.ultary.co
        - hubble.ultary.co
        - kc.ultary.co
        - kiali.ultary.co
        - sentry.ultary.co
        - vault.ultary.co
        #- wg.ultary.co
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - argo.ultary.co
        - harbor.ultary.co
        - hubble.ultary.co
        - kc.ultary.co
        - kiali.ultary.co
        - sentry.ultary.co
        - vault.ultary.co
        #- wg.ultary.co
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: ultary-core-https-tls
        mode: SIMPLE
---
#apiVersion: networking.istio.io/v1beta1
#kind: VirtualService
#metadata:
#  name: ultary-harbor-vs
#spec:
#  hosts:
#    - harbor.ultary.co
#  gateways:
#    - ultary-gateway
#  http:
#    - route:
#        - destination:
#            host: harbor.harbor.svc.cluster.local
#            port:
#              number: 80
#---
#apiVersion: networking.istio.io/v1beta1
#kind: VirtualService
#metadata:
#  name: ultary-hubble-vs
#spec:
#  hosts:
#    - hubble.ultary.co
#  gateways:
#    - ultary-gateway
#  http:
#    - route:
#        - destination:
#            host: hubble-ui.kube-system.svc.cluster.local
#            port:
#              number: 80
#---
#apiVersion: networking.istio.io/v1beta1
#kind: VirtualService
#metadata:
#  name: ultary-kiali-vs
#spec:
#  hosts:
#    - kiali.ultary.co
#  gateways:
#    - ultary-gateway
#  http:
#    - route:
#        - destination:
#            host: kiali.istio-system.svc.cluster.local
#            port:
#              number: 20001
#---
#apiVersion: networking.istio.io/v1beta1
#kind: VirtualService
#metadata:
#  name: ultary-sentry-vs
#spec:
#  hosts:
#    - sentry.ultary.co
#  gateways:
#    - ultary-gateway
#  http:
#    - route:
#        - destination:
#            host: sentry-nginx.sentry.svc.cluster.local
#            port:
#              number: 80
#---
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: ultary-wireguard-vs
# spec:
#   hosts:
#     - wg.ultary.co
#   gateways:
#     - ultary-gateway
#   http:
#     - route:
#         - destination:
#             host: wg.wg.svc.cluster.local
#             port:
#               number: 51821
# ---
